--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,6 +62,36 @@ layout: default
 
                 <hr style="visibility: hidden;">
 
+                <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+                <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
+                <script>
+                    var cloudTieConfig = {
+                        url: "http://zhouyanwei.cn/",
+                        sourceId: "http://zhouyanwei.cn/",
+                        productKey: "47210c381813452aaa1e24d73ae80592",
+                        target: "cloud-tie-wrapper"
+                    };
+                    var yunManualLoad = true;
+                    Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vcGMvbGl2ZXNjcmlwdC5odG1s", true);
+                </script>
+
+                <a class="cloud-tie-join-count" href="javascript:void(0);">
+                    <span class="icon-comment"></span>
+                    <span class="join-count">0</span>
+                    <span class="join-text">人参与</span>
+                </a>
+
+                <!-- DOM元素 -->
+                <!-- 根据站点情况，配置data-url或data-sourceId中的一个即可 -->
+                <span lang="join-count" class="join-count" data-url="http://zhouyanwei.cn/" data-sourceId="">0</span>
+
+                <!-- JavaScript 配置 -->
+                <script>var yunModuleEnv = true;</script>
+                <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
+                <script>
+                    var yunTieProductKey = "47210c381813452aaa1e24d73ae80592";
+                    Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vZXh0ZW5kL2xpc3Rfam9pbl9zY3JpcHQuaHRtbA==", true);
+                </script>
 
                 <ul class="pager">
                     {% if page.previous.url %}
